--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
+    "sib-api-v3-sdk": "^8.5.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
