--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-prod": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all --env production",
+    "dev-prod": "npx sequelize-cli db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all --env production",
     "dev": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all --env development",
     "start": "npx nodemon app.js"
   },
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apify-client": "^2.11.1",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -23,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^21.7.0",
     "sequelize": "^6.37.5",
     "sib-api-v3-sdk": "^8.5.0",
     "streamifier": "^0.1.1"
