--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
+    "sharp": "^0.33.5",
     "sib-api-v3-sdk": "^8.5.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
